<resources>
    <string name="app_name">Aura</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signed_in">Signed in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signed_in_cached">Signed in with cached credentials</string>
    <string name="resend_confirmation">Resend Email Confirmation</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email_address">Please enter your email address</string>
    <string name="available_timezone">Available timezones</string>
    <string name="enter_share_email_address">Please enter the user email address to which
        the device is to be shared.</string>
    <string name="confirmation_resent">A confirmation email was sent. Check your email account for details.</string>
    <string name="password_reset">An email was sent with intstructions to reset your password.</string>
    <string name="share_success">Device is now shared.</string>
    <string name="time_zone_update_success">Device timezone updated.</string>
     <string name="oauth_empty_html"><![CDATA[<font color="#005500"><H3><i>Authenticating with [[PROVIDER]]...</i></H3></font>
    ]]> </string>
    <string name="email_address">Email</string>
    <string name="email_address_new">New Email</string>
    <string name="update_email_address">Update Email</string>
    <string name="role">Role</string>
    <string name="access">Access</string>
    <string name="read_only">Read only</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="delete_share">Delete share</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country">Country</string>
    <string name="phone_country_code">Phone country code</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip</string>
    <string name="sign_up_success">Sign up successful! Check your email for further instructions.</string>
    <string name="fetching_profile">Fetching your profile from the service...</string>
    <string name="update_profile">Update Profile</string>
    <string name="updating_profile">Updating your profile</string>
    <string name="profile_udpated">Your profile was updated.</string>
    <string name="ok">Ok</string>
    <string name="setup_failed">Could not connect device to service. Please reset device and
        retry</string>
    <string name="confirm_connection_error">Error in confirming device connection </string>
    <string name="account_details">Account Details</string>
    <string name="device_name">Device Name</string>
    <string name="dsn">DSN</string>
    <string name="product_name">Product Name</string>
    <string name="connected_at">Connected At</string>
    <string name="connection_status">Connection Status</string>
    <string name="device_type">Device Type</string>
    <string name="lan_enabled">LAN enabled</string>
    <string name="lan_ip">LAN IP</string>
    <string name="location">Location</string>
    <string name="mac">MAC</string>
    <string name="model">Model</string>
    <string name="oem_model">OEM Model</string>
    <string name="product_class">Product Class</string>
    <string name="template_id">Template ID</string>
    <string name="device_details">Device Details</string>
    <string name="device_properties">Device Properties</string>
    <string name="property_read_only">Property is read-only</string>
    <string name="action_unregister">Unregister Device</string>
    <string name="registration_type">Registration type: %s</string>
    <string name="action_register">Register Device</string>
    <string name="action_share">Share Device</string>
    <string name="action_timezone">TimeZone</string>
    <string name="register_success">Successfuly registered device</string>
    <string name="register_error">Error in registration </string>
    <string name="unregister_confirm">Are you sure you want to unregister this device from your account?</string>
    <string name="unregistering">Unregistering device</string>
    <string name="registering">Registering device</string>
    <string name="signing_out">Signing out...</string>
    <string name="deleting_account">Deleting account...</string>
    <string name="signing_in_cached">Signing in with cached credentials...</string>
    <string name="text_null">null</string>
    <string name="fetch_all_properties">Fetch All Properties</string>
    <string name="fetching_all_properties">Fetching all properties from the cloud...</string>
    <string name="cannot_be_parsed">Value cannot be parsed to</string>
    <string name="sending_signup_token">Confirming your email address...</string>
    <string name="sign_up_complete">Sign-up complete. You may now sign in.</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="set_new_password">Set Password</string>
    <string name="change_password_success">Password changed successfully.</string>
    <string name="password_no_match">Password and confirmation do not match</string>
    <string name="updating_password">Updating your password. Please wait...</string>
    <string name="email_send_error">Error in creating message.</string>
    <string name="push_button">Push registration button on device</string>
    <string name="property_notifications">Notification</string>
    <string name="notification_name">Notification name</string>
    <string name="send_notifications_when">Send notifications when:</string>
    <string name="is_turned_on">is turned on</string>
    <string name="is_turned_off">is turned off</string>
    <string name="is_detected">Motion detected</string>
    <string name="is_stopped">Motion stopped</string>
    <string name="on_or_off">is turned on or off</string>
    <string name="becomes_greater_than">becomes greater than</string>
    <string name="becomes_less_than">becomes less than</string>
    <string name="changes">changes</string>
    <string name="notify_contacts">Notify these contacts:</string>
    <string name="loading_contacts">Loading Contacts...</string>
    <string name="save_notifications">Save Notifications</string>
    <string name="device_notifications">Notifications</string>
    <string name="push_notifcations_not_supported">Push notifications not supported</string>
    <string name="notifications_not_enabled">Property notifications are not available on this
        device</string>
    <string name="delete_notification_title">Delete Notification?</string>
    <string name="delete_notification_message">Do you want to remove the notification \"%s\"?</string>
    <string name="delete_notification_failed">Delete notification failed. Please try again later.</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="contact_phone_required">This contact cannot receive SMS messages</string>
    <string name="contact_email_required">This contact cannot receive email notifications</string>
    <string name="choose_name">Please choose a name for your notification</string>
    <string name="no_contacts_selected">Please select at least one contact to be notified via email or SMS</string>
    <string name="property_motion_sensor_friendly_name">Motion Sensor</string>
    <string name="notification_created">The notification was created successfully</string>
    <string name="no_value_chosen">Please choose a value to compare with</string>
    <string name="start_button_text">Start</string>
    <string name="iterations">Iterations (100 max)</string>
    <string name="action_run_tests">Run device tests...</string>
    <string name="stop_button_text">Stop</string>
    <string name="clear_button_text">Clear</string>
    <string name="all_tests">Run All Test Cases</string>
    <string name="test_runner_title">Test Runner</string>
    <string name="stop_after_error_textview">Stop after error (0 = never)</string>
    <string name="confirmation_template_id">aura_confirmation_template_01</string>
    <string name="confirmation_email_subject">Aura bids you welcome!</string>
    <string name="password_reset_template_id">aura_passwd_reset_template_01</string>
    <string name="share_email_template_id">aura_passwd_reset_template_01</string>
    <string name="password_reset_email_subject">Password Reset Request</string>
    <string name="rename_device_text">Enter the display name for your device below:</string>
    <string name="new_value_text">Enter the new %s value for your property below:</string>
    <string name="renaming_device">Updating device name. Please wait...</string>
    <string name="confirm_delete_account_title">Delete Account</string>
    <string name="confirm_delete_account_message">Are you sure you want to delete this account? This operation may not be undone.</string>
    <string name="delete_account">Delete Account</string>
    <string name="share_type">Resource Type</string>
    <string name="select_device"> Select device to setup</string>
    <string name="setup_wizard"> Setup Wizard</string>
    <string name="enter_regtoken"> Enter registration token</string>
    <string name="connect_device"> Connect device to %s</string>
    <string name="scan_devices">Scan for devices</string>
    <string name="scanning_devices">Scanning for devices...</string>
    <string name="connecting_to_device">Connecting to %s...</string>
    <string name="setup_permission_message">Could not create setup object- do we have permission?</string>
    <string name="error_fetching_AP">Error in fetching APs from device</string>
    <string name="error_scan_devices">Error in scan devices. </string>
    <string name="no_AP_found">No device APs found </string>
    <string name="error_connecting_service">Error connecting to service</string>
    <string name="error_reconnecting">Error in reconnecting to original network</string>
    <string name="select_AP">Please select an AP to connect the device to</string>
    <string name="scanning_APs">Device is scanning for APs...</string>
    <string name="wifi_show_password">Show</string>
    <string name="wifi_password">WiFi password</string>
    <string name="setup_token_is">SetupToken for this device is %s</string>
    <string name="connect_to_service">Connect device to service</string>
    <string name="disconnect_AP">Disconnect AP mode </string>
    <string name="failed_connect_device">Failed to connect to device</string>
    <string name="connecting_to_service">Connecting device to service...</string>
    <string name="reconnecting">Connecting back to original network...</string>
    <string name="stop_ap">Stopping device AP mode...</string>
    <string name="connect_success">Device has connected to the Ayla service</string>
    <string name="connect_wifi_success">Device has connected to the WiFi network</string>
</resources>